ESM-871 - Small fix to milestone table alignment

--- a/modules/projects/client/scss/project-schedule.scss
+++ b/modules/projects/client/scss/project-schedule.scss
@@ -105,5 +105,15 @@ $milestone-panel-heading-bg: #EEE;
             padding: 0.7rem;
         }
     }
+
+    .milestone-table {
+        td {
+            vertical-align: top;
+
+            &.actions-col {
+                padding-top: 0.4rem;
+            }
+        }
+    }
 }
 
